# food-ordering-system-rs

./: .gitignore  Cargo.toml
common/: Cargo.toml
common/src/: lib.rs
infrastructure/kafka/: Cargo.toml
infrastructure/kafka/src/: lib.rs
ordering-service/data-access/: Cargo.toml
ordering-service/data-access/src/: lib.rs
ordering-service/domain/core/: Cargo.toml
ordering-service/domain/core/src/: lib.rs
ordering-service/domain/domain_core/: Cargo.toml
ordering-service/domain/domain_core/src/: lib.rs
ordering-service/domain/service/: Cargo.toml
ordering-service/domain/service/src/: lib.rs
ordering-service/messaging/: Cargo.toml
ordering-service/messaging/src/: lib.rs
