[package]
name = "food-ordering-system-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ordering-service"
path = "./ordering-service/container/src/main.rs"

[workspace]
members = [
  "ordering-service/domain/core",
  "ordering-service/domain/service",
  "ordering-service/container",
  "common",
]

[workspace.dependencies]
uuid = { version = "1.2.2", features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
thiserror = "1.0.38"
chrono = "0.4.23"
derive_builder = "0.12.0"

[dependencies]
