[package]
name = "kafka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = { workspace = true }
async-trait = { workspace = true }
apache-avro = { version = "0.14.0", features = ["derive"] }
uuid = { workspace = true }
thiserror = { workspace = true }
rdkafka = "0.29.0"
schema_registry_converter = { version = "3.1.0", features = ["avro"] }
chrono = { workspace = true }
serde = { workspace = true }
