[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { workspace = true }
common = { path = "../../../common" }
chrono = { workspace = true }
domain_core = { path = "../domain_core" }
derive_builder = { workspace = true }
async-trait = { workspace = true }
